added size parameters for linear-gradient

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <style>
         body {
-            background-size: auto;
+            background-size:50px 500px;
             background-image:linear-gradient(yellow, green)
         }
             h1 {
