--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <style>
         body {
-            background-size:50px 500px;
+            background-size:50px 1000px;
             background-image:linear-gradient(yellow, green)
         }
             h1 {
@@ -16,10 +16,20 @@
                 font-family:verdana;
                 font-size: 20px
                  }
+            #size {
+                margin-left:40%;
+                width:200px;
+                height:300px;
+                border:10px inset green;
+                outline:4px solid black;
+                border-radius:4px;
+                 }
         </style>
     </head>
     <body>
         <h1>Try Me!</h1>
-        <p>This is just for fun to get the hang of coding and using GitHub.</p>
+        <img id="size" src="C:\Users\Mine\OneDrive\Pictures\Camera Roll\IMG_20170826_064859.jpg" alt="Dog Picture">
+        
+            <p>This is just for fun to get the hang of coding and using GitHub and VS.</p>
     </body>   
 </html>
